--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-to-pdf": "0.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
